force-app/main/default/objects/DocFab_User_Setting__c/DocFab_User_Setting__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Contains the profile for field permission also username and encoded password for DIN-177.</description>
    <label>DocFab User Setting</label>
</CustomObject>