force-app/main/default/objects/DocFab_User_Setting__c/fields/Model_Service_Key__c.field-meta.xml
<CustomField>
    <fullName>Model_Service_Key__c</fullName>
    <label>Model Service Key</label>
    <length>100</length>
    <type>Text</type>
</CustomField>