force-app/main/default/objects/DocFab_User_Setting__c/fields/Profiles__c.field-meta.xml
<CustomField>
    <fullName>Profiles__c</fullName>
    <description>Contains comma seperated profiles for field permission.</description>
    <label>Profiles</label>
    <type>TextArea</type>
</CustomField>