force-app/main/default/objects/DocFab_User_Setting__c/fields/User_Password__c.field-meta.xml
<CustomField>
    <fullName>User_Password__c</fullName>
    <description>Contains encrypted password  for metadata service.</description>
    <label>User Password</label>
    <length>100</length>
    <type>Text</type>
</CustomField>