force-app/main/default/objects/DocFab_User_Setting__c/fields/Username__c.field-meta.xml
<CustomField>
    <fullName>Username__c</fullName>
    <description>Contains username for medadata service.</description>
    <label>Username</label>
    <length>100</length>
    <type>Text</type>
</CustomField>